--- a/MvcApi/appsettings.json
+++ b/MvcApi/appsettings.json
@@ -8,6 +8,9 @@
       "Default": "Debug",
       "System": "Information",
       "Microsoft": "Information"
+    },
+    "AppSettings": {
+      "IdServerEndPoint": "http://id.easyadmincp.com"
     }
   }
 }
